k8-notes/card01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cude-test
spec:
  containers:
  - name: cude-test
    image: "k8s.gcr.io/cuda-vector-add:v0.1"
  nodeSelector:
    accelerator: nvidia-tesla-p100
