k8-notes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    env:
    - name: option 
      valueFrom:
        configMapKeyRef:
          name: option
          key: var5
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
