k8-notes/svc02.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx01-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx01-svc
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx01-svc
  name: nginx01-svc
spec:
  containers:
  - image: nginx
    name: nginx01-svc
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
